# functivore

./: .gitignore  CMakeLists.txt  Config.cmake.in  DOCS.md  README.md
docs/facilities/: apply_return_type.doc.md
functivore/: analyzer.hpp  apply_return_type.hpp  is_function_pointer.hpp  is_nonoverloaded_function_object.hpp
functivore/descend/: are_same_type_signature_as.hpp  get_parameter_types.hpp  get_return_type.hpp  get_type_signature.hpp  get_variadic_type_signature.hpp  is_const.hpp  is_lvalue_reference.hpp  is_noexcept.hpp  is_rvalue_reference.hpp  is_variadic.hpp  is_volatile.hpp  same_type_signature.hpp
functivore/microbiota/functilis/: analyzer_prototype.hpp
functivore/microbiota/functilis/analyzer_prototype/: analyzer_prototype.hpp
functivore/microbiota/functilis/analyzer_prototype/ascend/: analyzer_prototype.hpp
functivore/microbiota/functilis/analyzer_prototype/ascend/ascend/: analyzer_prototype.hpp
functivore/microbiota/functilis/analyzer_prototype/ascend/ascend/ascend/: analyzer_prototype.hpp
tests/unit/: analyzer.test.hpp  apply_return_type.test.hpp  are_same_type_signature_as.test.hpp  get_parameter_types.test.hpp  get_return_type.test.hpp  get_type_signature.test.hpp  get_variadic_type_signature.test.hpp  is_const.test.hpp  is_function_pointer.test.hpp  is_lvalue_reference.test.hpp  is_nonoverloaded_function_object.test.hpp  is_rvalue_reference.test.hpp  is_variadic.test.hpp  is_volatile.test.hpp  typical_get_parameter_types.test.hpp  typical_get_return_type.test.hpp  typical_get_type_signature.test.hpp  typical_get_variadic_type_signature.test.hpp
(+2 files in other folders)
